--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@ const quizData=[
   {"stage":"4","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"進行方向は？","image":"images/ookubo.png","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"4","mode":"","quiztype":"ドキドキ☆2択クイズ","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"片方しか助けられない。<br>どっちを助ける？","image":"images/white.png","image2":"images/tinmoku.png","image2time":"5000","options":[{"text":"娘"},{"text":"息子"},{"text":""},{"text":""}],"correct":null,"answertime":10000,"answerstart":1,"perfect":-100,"excellent":-200,"great":-300,"good":-400,"safe":-500},
   {"stage":"4","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けてください","image":"images/tyoki2.png","image2":"","image2time":"","options":[{"text":"グー"},{"text":"チョキ"},{"text":"パー"},{"text":""}],"correct":"パー","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"4","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/trainers.png","image2":"images/trainers2.png","image2time":"10000","options":[{"text":"A"},{"text":"B"},{"text":"C"},{"text":"D"}],"correct":"A","answertime":20000,"answerstart":20000,"perfect":17000,"excellent":12000,"great":7000,"good":2000,"safe":0},
+  {"stage":"4","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/trainers1.png","image2":"images/trainers2.png","image2time":"10000","options":[{"text":"A"},{"text":"B"},{"text":"C"},{"text":"D"}],"correct":"A","answertime":20000,"answerstart":20000,"perfect":17000,"excellent":12000,"great":7000,"good":2000,"safe":0},
   {"stage":"4","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/pico_up.png","image2":"images/pico_down.png","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"4","mode":"","quiztype":"確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは30才以上ですか？","image":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"いいえ"},{"text":""},{"text":""}],"correct":"はい","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
   {"stage":"4","mode":"","quiztype":"最終確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは吉田達彦ですね？","image":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"はい"},{"text":""},{"text":""}],"correct":"はい","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},  
@@ -51,6 +51,9 @@ const stageData=[
 </script>
 </head>
 <body>
+<audio id="bgm" src="bgm/Specification.mp3" autoplay loop></audio>
+<audio id="sound" src="bgm/seikai.mp3" ></audio>
+
 <div class="cutin">
 <div class="cutin-content">
 <img src="images/batsu.png" class="cutin-img" style="display:none;">
@@ -549,6 +552,7 @@ const rankHighlight = document.getElementById('rankTextHighlight');
 const cutinScoreValue=document.getElementById('cutinScoreValue');
 
 function handleAnswer(selected){
+
   if(answered) return;
   answered=true;
   stopTimer();
@@ -557,6 +561,14 @@ function handleAnswer(selected){
   Array.from(buttonsDiv.children).forEach(btn=>{
     if(btn.textContent.includes(selected)) btn.classList.add('pressed');
   });
+
+  document.getElementById('bgm').play();
+  if(isCorrect){
+    document.getElementById('sound').src = 'bgm/seikai.mp3'
+  }else{
+    document.getElementById('sound').src = 'bgm/huseikai.mp3'
+  }
+  document.getElementById('sound').play();
   
   if(isCorrect && q.answerstart > timeLeftMs){
     var gained = 0;
