--- a/quiz.html
+++ b/quiz.html
@@ -6,31 +6,29 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet" href="style2.css">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <title>AI脳トレ</title>
 <script>
 // --- 問題データ ---
 const quizData=[
-    {"stage":"1","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで勝ってください","image":"images/goo.png","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answertime":2000000,"answerstart":2000000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
-
-    {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あてはまるのは？","image":"images/jigsaw.png","image2":"","image2time":"","options":[{"text":"A"},{"text":"B"},{"text":""},{"text":""}],"correct":"A","answertime":2000000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
-
   {"stage":"1","mode":"","quiztype":"計算力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"１＋１＝？","image":"","image2":"","image2time":"","options":[{"text":"1"},{"text":"2"},{"text":""},{"text":""}],"correct":"2","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"1","mode":"","quiztype":"色彩認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"ピクセル数が多いのは？","image":"images/dot1.png","image2":"","image2time":"","options":[{"text":"黒"},{"text":"黄"},{"text":""},{"text":""}],"correct":"黄","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"1","mode":"","quiztype":"パターン認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"？にあてはまるのは","image":"images/num1.png","image2":"","image2time":"","options":[{"text":"1"},{"text":"2"},{"text":"3"},{"text":"4"}],"correct":"2","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"1","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/yubirenda.png","image2":"","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"1","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"文字数が多いのは？","image":"images/ty.png","image2":"","image2time":"","options":[{"text":"T"},{"text":"Y"},{"text":""},{"text":""}],"correct":"Y","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
-  {"stage":"1","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで勝ってください<br>「グー」","image":"","image2":"","image2time":"","options":[{"text":"グー"},{"text":"チョキ"},{"text":"パー"},{"text":""}],"correct":"パー","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"1","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで勝ってください","image":"images/goo.png","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"1","mode":"mikiri","quiztype":"運動神経伝達力","beforeTxt":"もぐらが出たらたたけ！","beforeImg":"images/mogu1.png","beforeMusic":"","beforeTime":"8000","question":"もぐらが出たらたたけ！","image":"images/mogu2.png","image2":"","image2time":"","options":[{"text":"たたく"},{"text":""},{"text":""},{"text":""}],"correct":"たたく","answertime":4000,"answerstart":4000,"perfect":3500,"excellent":3000,"great":2000,"good":1000,"safe":0},
   {"stage":"2","mode":"","quiztype":"計算力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"３５－３０＝？","image":"","image2":"","image2time":"","options":[{"text":"4"},{"text":"5"},{"text":"6"},{"text":"7"}],"correct":"5","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"色彩認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"ピクセル数が多いのは？","image":"images/dot2.png","image2":"","image2time":"","options":[{"text":"黒"},{"text":"黄"},{"text":""},{"text":""}],"correct":"黄","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"進行方向は？","image":"images/bus_left.png","image2":"","image2time":"","options":[{"text":"左"},{"text":"右"},{"text":""},{"text":""}],"correct":"左","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/otama.png","image2":"","image2time":"","options":[{"text":"A"},{"text":"B"},{"text":""},{"text":""}],"correct":"A","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
-  {"stage":"2","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けてください","image":"images/tyoki1.png","image2":"","image2time":"","options":[{"text":"グー"},{"text":"チョキ"},{"text":"パー"},{"text":""}],"correct":"パー","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"2","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あてはまるのは？","image":"images/jigsaw.png","image2":"","image2time":"","options":[{"text":"A"},{"text":"B"},{"text":""},{"text":""}],"correct":"A","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"2","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けてください","image":"images/tyoki1.png","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/karate_left.png","image2":"images/karate_right.png","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"2","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"進行方向は？","image":"images/bus_right.png","image2":"","image2time":"","options":[{"text":"左"},{"text":"右"},{"text":""},{"text":""}],"correct":"右","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"","quiztype":"問題解決力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"片方しか助けられない。<br>どっちを助ける？","image":"","image2":"","image2time":"","options":[{"text":"母親"},{"text":"恋人"},{"text":""},{"text":""}],"correct":null,"answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"2","mode":"mikiri","quiztype":"運動神経伝達力","beforeTxt":"On your marks.","beforeImg":"images/OnYourMarks.png","beforeMusic":"","beforeTime":"5000","question":"On your marks.  Set.","image":"images/start1.png","image2":"","image2time":"","options":[{"text":"START"},{"text":""},{"text":""},{"text":""}],"correct":"START","answertime":4000,"answerstart":4000,"perfect":3500,"excellent":3000,"great":2000,"good":1000,"safe":0},
-  {"stage":"3","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"今何問目？","image":"","image2":"","image2time":"","options":[{"text":"14"},{"text":"15"},{"text":"16"},{"text":"17"}],"correct":"17","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
+  {"stage":"3","mode":"","quiztype":"記憶力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"今何問目？","image":"","image2":"","image2time":"","options":[{"text":"14"},{"text":"15"},{"text":"16"},{"text":"17"}],"correct":"18","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"3","mode":"","quiztype":"パターン認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"？にあてはまるのは","image":"images/num2.png","image2":"","image2time":"","options":[{"text":"1"},{"text":"2"},{"text":"3"},{"text":"4"}],"correct":"1","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"3","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/keropen.png","image2":"","image2time":"","options":[{"text":"A"},{"text":"B"},{"text":""},{"text":""}],"correct":"B","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"3","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"文字数が多いのは？","image":"images/moji2.png","image2":"","image2time":"","options":[{"text":"S"},{"text":"A"},{"text":""},{"text":""}],"correct":"S","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
@@ -38,19 +36,19 @@ const quizData=[
   {"stage":"3","mode":"","quiztype":"色彩認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"ピクセル数が多いのは？","image":"images/dot3.png","image2":"","image2time":"","options":[{"text":"黒"},{"text":"黄"},{"text":""},{"text":""}],"correct":"黒","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"4","mode":"","quiztype":"空間認識力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"進行方向は？","image":"images/ookubo.png","image2":"","image2time":"","options":[{"text":"手前"},{"text":"奥"},{"text":""},{"text":""}],"correct":"手前","answertime":20000,"answerstart":20000,"perfect":19000,"excellent":15000,"great":10000,"good":5000,"safe":0},
   {"stage":"4","mode":"","quiztype":"ドキドキ☆2択クイズ","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"片方しか助けられない。<br>どっちを助ける？","image":"images/white.png","image2":"images/tinmoku.png","image2time":"5000","options":[{"text":"娘"},{"text":"息子"},{"text":""},{"text":""}],"correct":null,"answertime":10000,"answerstart":1,"perfect":-100,"excellent":-200,"great":-300,"good":-400,"safe":-500},
-  {"stage":"4","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けてください","image":"images/tyoki2.png","image2":"","image2time":"","options":[{"text":"グー"},{"text":"チョキ"},{"text":"パー"},{"text":""}],"correct":"パー","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
+  {"stage":"4","mode":"","quiztype":"注意力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"じゃんけんで負けてください","image":"images/tyoki2.png","image2":"","image2time":"","options":[{"text":"images/goo.png"},{"text":"images/tyoki.png"},{"text":"images/paa.png"},{"text":""}],"correct":"images/paa.png","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
   {"stage":"4","mode":"","quiztype":"形状判断力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"若いのは？","image":"images/trainers1.png","image2":"images/trainers2.png","image2time":"10000","options":[{"text":"A"},{"text":"B"},{"text":"C"},{"text":"D"}],"correct":"A","answertime":20000,"answerstart":20000,"perfect":17000,"excellent":12000,"great":7000,"good":2000,"safe":0},
   {"stage":"4","mode":"renda","quiztype":"運動神経伝達力","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"連打して！","image":"images/pico_up.png","image2":"images/pico_down.png","image2time":"","options":[{"text":"連打!"},{"text":""},{"text":""},{"text":""}],"correct":"","answertime":5000,"answerstart":5000,"perfect":50,"excellent":40,"great":30,"good":20,"safe":10},
   {"stage":"4","mode":"","quiztype":"確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは30才以上ですか？","image":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"いいえ"},{"text":""},{"text":""}],"correct":"はい","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
-  {"stage":"4","mode":"","quiztype":"最終確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは吉田達彦ですね？","image":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"はい"},{"text":""},{"text":""}],"correct":"はい","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},  
+  {"stage":"4","mode":"","quiztype":"最終確認","beforeTxt":"","beforeImg":"","beforeMusic":"","beforeTime":"","question":"あなたは吉田達彦ですね？","image":"","image2":"","image2time":"","options":[{"text":"はい"},{"text":"はい"},{"text":""},{"text":""}],"correct":"はい","answertime":10000,"answerstart":10000,"perfect":9500,"excellent":7500,"great":5000,"good":2500,"safe":0},
 ];
 
 // --- ステージ情報 ---
 const stageData=[
-  {"stage":"1", "count":"7", "loadMsg":"問題を作成しています…", "startMsg":"まずは肩慣らしです。"},
-  {"stage":"2", "count":"9", "loadMsg":"あなたの回答を分析しています…", "startMsg":"少しレベルを上げます！"},
-  {"stage":"3", "count":"6", "loadMsg":"あなたにあわせて調整しています…", "startMsg":"やりますね！さらにレベルアップ！"},
-  {"stage":"4", "count":"7", "loadMsg":"完全にあなたを理解しました…", "startMsg":"レベルMAX！最終ステージです！"},
+  {"stage":"1", "loadMsg":"問題を作成しています…", "startMsg":"まずは肩慣らしです。"},
+  {"stage":"2", "loadMsg":"あなたの回答を分析しています…", "startMsg":"少しレベルを上げます！"},
+  {"stage":"3", "loadMsg":"あなたにあわせて調整しています…", "startMsg":"やりますね！さらにレベルアップ！"},
+  {"stage":"4", "loadMsg":"完全にあなたを理解しました…", "startMsg":"レベルMAX！最終ステージです！"},
 ]
 </script>
 </head>
@@ -170,7 +168,6 @@ const stageData=[
   </div>
 </div>
 
-
 <div class="container" >
   <!-- === ステージ情報バー === -->
   <div class="stage-info">
@@ -209,6 +206,10 @@ window.addEventListener("load", () => {
   imageUrls.add('images/renda.png');
   imageUrls.add('images/mikiri.png');
   imageUrls.add('images/mikiri_press.png');
+  //ボタン用
+  imageUrls.add('images/goo.png');
+  imageUrls.add('images/tyoki.png');
+  imageUrls.add('images/paa.png');
   
   quizData.forEach(q => {
     if (q.beforeImg) imageUrls.add(q.beforeImg);
@@ -586,10 +587,9 @@ function handleAnswer(selected){
     if(btn.textContent.includes(selected)) btn.classList.add('pressed');
   });
 
-  document.getElementById('bgm').play();
   if(isCorrect){
     playSound('seikai');
-    playSound('point', 0.2);
+    playSound('point', 0.5);
   }else{
     playSound('huseikai');
   }
@@ -678,7 +678,7 @@ function rendaResult(){
 
     if(cutinTitle != "BAD"){
       playSound('seikai');
-      playSound('point', 0.2);
+      playSound('point', 0.5);
     }else{
       playSound('huseikai');
     }
@@ -886,6 +886,11 @@ function showNextStage(){
         }
 
         setTimeout(() => {
+          //BGMスピードを変更
+          const bgm = document.getElementById('bgm');
+          bgm.playbackRate = 0.9 + 0.1 * nowStage.stage;
+          bgm.play();
+
           count = 3;
           showCountdown();
         }, 2000);
@@ -969,9 +974,23 @@ function accelerateBackground() {
 }
 
 document.body.addEventListener('click', () => {
+  init();
+}, { once:true });
+
+function init(){
+  // stageData.count を quizData から自動生成
+  const stageCounts = quizData.reduce((acc, q) => {
+    acc[q.stage] = (acc[q.stage] || 0) + 1;
+    return acc;
+  }, {});
+
+  stageData.forEach(s => {
+    s.count = stageCounts[s.stage] || 0;
+  });
+
   createProgressSegments(1);
   showNextStage();
-}, { once:true });
+}
 
 // --- カウントダウン処理 ---
 const overlay=document.getElementById('countdown-overlay');
@@ -1043,6 +1062,7 @@ function endQuiz(){
 // ==== 音声処理 ====
 function playSound(name, vol = 1.0){
   const a = document.getElementById('sound_'+name);
+  a.currentTime = 0;
   a.volume = vol;   // 0.0〜1.0
   a.play();
 }
